# headless-cms

./: .gitignore  Dockerfile  Procfile  db.sqlite3  manage.py  pyproject.toml
headless_cms/: urls.py  wsgi.py
headless_cms/settings/: base.py  dev.py
headless_cms/templates/: base.html
home/: models.py
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
