[tool.poetry]
name = "headless-cms"
version = "0.1.0"
description = ""
authors = ["ihor-palii <palii.ihor@uvik.net>"]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^5.1.1"
gunicorn = "^21.2.0"
wagtail-blocks = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.7"
django-storages = "^1.14"
s3 = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
